--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
   },
   "rules": {
     "no-console": 2,
-    "react/prop-types": ["off"]
+    "react/prop-types": ["off"],
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
-  
